tests/misc_tests/type_eq_ui_tests/zip_type_err.stderr
warning: unused import: `TypeFn`
 --> tests/misc_tests/type_eq_ui_tests/zip_type_err.rs:1:23
  |
1 | use typewit::{TypeEq, TypeFn};
  |                       ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
 --> tests/misc_tests/type_eq_ui_tests/zip_type_err.rs:5:5
  |
4 | fn zip2<'a, L, R>(te: TypeEq<L, R>) -> TypeEq<L, R> {
  |             - this type parameter      ------------ expected `TypeEq<L, R>` because of return type
5 |     te.zip(te)
  |     ^^^^^^^^^^ expected `TypeEq<L, R>`, found `TypeEq<(L, L), (R, R)>`
  |
  = note: expected struct `TypeEq<L, R>`
             found struct `TypeEq<(L, L), (R, R)>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/zip_type_err.rs:13:5
   |
12 | ) -> TypeEq<(), ()> {
   |      -------------- expected `TypeEq<(), ()>` because of return type
13 |     a.zip3(b, c)
   |     ^^^^^^^^^^^^ expected `TypeEq<(), ()>`, found `TypeEq<(A, C, E), (B, D, F)>`
   |
   = note: expected struct `TypeEq<(), ()>`
              found struct `TypeEq<(A, C, E), (B, D, F)>`

error[E0308]: mismatched types
  --> tests/misc_tests/type_eq_ui_tests/zip_type_err.rs:22:5
   |
21 | ) -> TypeEq<(), ()> {
   |      -------------- expected `TypeEq<(), ()>` because of return type
22 |     a.zip4(b, c, d)
   |     ^^^^^^^^^^^^^^^ expected `TypeEq<(), ()>`, found `TypeEq<(A, C, E, G), (B, D, F, H)>`
   |
   = note: expected struct `TypeEq<(), ()>`
              found struct `TypeEq<(A, C, E, G), (B, D, F, H)>`
